---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 72,
    groups: {
        "user": (
            0,
            5,
        ),
        "pid": (
            10,
            15,
        ),
        "cpu": (
            18,
            20,
        ),
        "mem": (
            23,
            25,
        ),
        "vsz": (
            29,
            32,
        ),
        "rss": (
            35,
            38,
        ),
        "tty": (
            40,
            45,
        ),
        "stat": (
            49,
            50,
        ),
        "start": (
            54,
            58,
        ),
        "time": (
            62,
            65,
        ),
        "command": (
            67,
            72,
        ),
    },
}
p: '(?<user>otacon) {4}(?<pid>[0123456789]+) +(?<cpu>[0123456789]\.[0123456789]) +(?<mem>[0123456789]\.[0123456789]) +(?<vsz>[0123456789]+) +(?<rss>[0123456789]+) +(?<tty>[^ ]+) +(?<stat>(?:R|W|X)\+?) {3}(?<start>[^ ]+) +(?<time>[^ ]+) (?<command>.*)'
i: 'otacon    730061  0.0  0.0   7480  3112 pts/32   R+   11:44   0:00 ps aux'
    ^                                                                       ^
